--- a/trunk/VIENNAAddIn/upcc3/Wizards/dev/ui/AbieEditor.xaml
+++ b/trunk/VIENNAAddIn/upcc3/Wizards/dev/ui/AbieEditor.xaml
@@ -14,7 +14,7 @@
         </DockPanel>
         
         <StackPanel Orientation="Horizontal" DockPanel.Dock="Bottom" HorizontalAlignment="Center" Margin="1,15,1,1">
-            <Button HorizontalAlignment="Center" Width="100" Name="buttonSave" Margin="5,5,5,5" Click="buttonSave_Click">_Generate ABIE</Button>
+            <Button HorizontalAlignment="Center" Width="100" Name="buttonSave" Margin="5,5,5,5" Click="buttonGenerate_Click">_Generate ABIE</Button>
             <Button HorizontalAlignment="Center" Width="100" Name="buttonClose" Margin="5,5,5,5" Click="buttonClose_Click">_Close</Button>
         </StackPanel>
         <!--<DockPanel DockPanel.Dock="Bottom" HorizontalAlignment="Stretch" Margin="1,1,1,1">
@@ -53,7 +53,7 @@
                                         <ListBox.ItemTemplate>
                                             <DataTemplate>
                                                 <StackPanel Orientation="Horizontal">
-                                                    <CheckBox IsChecked="{Binding Path=Checked}"/>
+                                                    <CheckBox IsChecked="{Binding Path=Checked}" Checked="checkedlistboxBCCs_ItemChecked" Unchecked="checkedlistboxBCCs_ItemChecked" />
                                                     <Label Content="{Binding Path=Text}" MouseLeftButtonDown="SelectTextBoxBccItemOnMouseSingleClick" Margin="-3,-5,0,-3"/>
                                                 </StackPanel>
                                             </DataTemplate>
@@ -75,7 +75,7 @@
                                         <ListBox.ItemTemplate>
                                             <DataTemplate>
                                                 <CheckBox IsChecked="{Binding Path=Checked}">
-                                                    <TextBox Text="{Binding Path=Text}" IsEnabled="True" BorderThickness="0" Background="Transparent" PreviewMouseLeftButtonDown="SelectTextBoxBbieItemOnMouseSingleClick" KeyUp="textboxKeyUp"/>
+                                                    <TextBox Text="{Binding Path=Text}" IsEnabled="True" BorderThickness="0" Background="Transparent" PreviewMouseLeftButtonDown="SelectTextBoxBbieItemOnMouseSingleClick" KeyUp="ForceTextboxToLoseFocus"/>
                                                 </CheckBox>
                                             </DataTemplate>
                                         </ListBox.ItemTemplate>
@@ -89,12 +89,13 @@
                             <GroupBox Header="BDTs available to typify the BBIEs" Margin="-2,0,0,0">
                                 <DockPanel>
                                     <StackPanel DockPanel.Dock="Top" Orientation="Horizontal" Height="20" Margin="0,0,0,0" />
-                                    <ListBox ItemsSource="{Binding Path=Model.PotentialBdtItems}" Name="checkedlistboxBDTs" Margin="0,0,0,0" SelectionChanged="checkedlistboxBDTs_SelectionChanged" KeyboardNavigation.TabIndex="4">
+                                    <ListBox ItemsSource="{Binding Path=Model.PotentialBdtItems}" Name="checkedlistboxBDTs" Margin="0,0,0,0" SelectionChanged="checkedlistboxBDTs_SelectionChanged" KeyboardNavigation.TabIndex="4" Padding="0,1,0,0">
                                         <ListBox.ItemTemplate>
                                             <DataTemplate>
-                                                <CheckBox IsChecked="{Binding Path=Checked}">
-                                                    <TextBox Text="{Binding Path=Text}" IsReadOnly="False" BorderThickness="0" Background="Transparent" PreviewMouseLeftButtonDown="SelectTextBoxBdtItemOnMouseSingleClick" KeyUp="textboxKeyUp"/>
-                                                </CheckBox>
+                                                <StackPanel Orientation="Horizontal">
+                                                    <CheckBox IsChecked="{Binding Path=Checked}" /> 
+                                                    <Label Content="{Binding Path=Text}" MouseLeftButtonDown="SelectTextBoxBdtItemOnMouseSingleClick" Margin="-3,-5,0,-3"/>
+                                                </StackPanel>
                                             </DataTemplate>
                                         </ListBox.ItemTemplate>
                                         <ListBox.Resources>
@@ -112,12 +113,13 @@
                         <UniformGrid Rows="1" Columns="2">
                             <GroupBox Header="ABIEs available to associate the new ABIE with" Margin="0,0,0,0">
                                 <DockPanel>
-                                    <ListBox ItemsSource="{Binding Path=Model.CandidateAsbieItems}" Name="checkedlistboxABIEs" Margin="0,3,0,0" SelectionChanged="checkedlistboxABIEs_SelectionChanged" KeyboardNavigation.TabIndex="0">
+                                    <ListBox ItemsSource="{Binding Path=Model.CandidateAbieItems}" Name="checkedlistboxABIEs" Margin="0,3,0,0" SelectionChanged="checkedlistboxABIEs_SelectionChanged" KeyboardNavigation.TabIndex="0" Padding="0,1,0,0">
                                         <ListBox.ItemTemplate>
                                             <DataTemplate>
-                                                <CheckBox IsChecked="{Binding Path=Checked}">
-                                                    <TextBox Text="{Binding Path=Text}" IsReadOnly="False" BorderThickness="0" Background="Transparent" PreviewMouseLeftButtonDown="SelectTextBoxAbieItemOnMouseSingleClick" KeyUp="textboxKeyUp"/>
-                                                </CheckBox>
+                                                <StackPanel Orientation="Horizontal">
+                                                    <CheckBox IsChecked="{Binding Path=Checked}" />
+                                                    <Label Content="{Binding Path=Text}" MouseLeftButtonDown="SelectTextBoxAbieItemOnMouseSingleClick" Margin="-3,-5,0,-3"/>
+                                                </StackPanel>
                                             </DataTemplate>
                                         </ListBox.ItemTemplate>
                                         <ListBox.Resources>
@@ -129,12 +131,13 @@
                             </GroupBox>
                             <GroupBox Header="ASCCs available for the chosen ABIE" Margin="-2,0,0,0">
                                 <DockPanel>
-                                    <ListBox ItemsSource="{Binding Path=Model.CandidateAsccItems}" Name="checkedlistboxASCCs" Margin="0,3,0,0" SelectionChanged="checkedlistboxASCCs_SelectionChanged" KeyboardNavigation.TabIndex="1">
+                                    <ListBox ItemsSource="{Binding Path=Model.PotentialAsbieItems}" Name="checkedlistboxASCCs" Margin="0,3,0,0" SelectionChanged="checkedlistboxASCCs_SelectionChanged" KeyboardNavigation.TabIndex="1" Padding="0,1,0,0">
                                         <ListBox.ItemTemplate>
                                             <DataTemplate>
-                                                <CheckBox IsChecked="{Binding Path=Checked}">
-                                                    <TextBox Text="{Binding Path=Text}" IsReadOnly="False" BorderThickness="0" Background="Transparent" PreviewMouseLeftButtonDown="SelectTextBoxAsccItemOnMouseSingleClick" KeyUp="textboxKeyUp"/>
-                                                </CheckBox>
+                                                <StackPanel Orientation="Horizontal">
+                                                    <CheckBox IsChecked="{Binding Path=Checked}" />                                                    
+                                                    <Label Content="{Binding Path=Text}" MouseLeftButtonDown="SelectTextBoxAsccItemOnMouseSingleClick" Margin="-3,-5,0,-3"/>
+                                                </StackPanel>
                                             </DataTemplate>
                                         </ListBox.ItemTemplate>
                                         <ListBox.Resources>
